package com.example.jiaji.daggertest.coffee;

/**
 * 加热器
 */
interface Heater {
    void on();
    void off();
    boolean isHot();
}
