package com.example.jiaji.daggertest.coffee;

import javax.inject.Inject;

import dagger.Provides;

public class ProviderEntity
{
    @Inject
    public ProviderEntity()
    {
    }
}
